--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "astro": "^5.7.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "starlight-site-graph": "^0.5.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
