--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,6 @@
+# Copyright 2025 Colton Loftus
+# SPDX-License-Identifier: AGPL-3.0-only
+
 name: Deploy to GitHub Pages
 
 on:
@@ -20,6 +23,8 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # <-- ensures full git history is available for lastModified times
       - name: Install, build, and upload your site
         uses: withastro/action@v3
         # with:
